--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-embassy-stm32 = { version = "0.2.0" }
+embassy-stm32 = { version = "0.2.0", features = [ "defmt", "stm32g0b1ke" ]  }
 
 defmt = "0.3"
 
